[metadata]
name = btzen
version = 0.5.2
author = Artur Wroblewski
author_email = wrobell@riseup.net
license = GPLv3+
description = BTZen - library to asynchronously access Bluetooth devices
long_description = file: README
long_description_content_type = text/x-rst
url = https://github.com/wrobell/btzen
classifiers =
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >= 3.8
include_package_data = True

[options.extras_require]
tests = mypy
    types-pkg-resources

[tool:pytest]
addopts=--cov btzen --cov-report=term-missing

[tool:coverage:report]
show_missing=1
partial_branches=1
